Update google-java-format to v1.15.0