@@ -1,6 +1,6 @@
 #!/usr/bin/env sh
 
-VERSION=1.12.0
+VERSION=1.15.0
 JARFILE=google-java-format-$VERSION-all-deps.jar
 
 mkdir -p .cache
@@ -14,10 +14,4 @@ cd ..
 
 changed_java_files=$(git diff --cached --name-only --diff-filter=ACMR | grep ".*java$" )
 echo $changed_java_files
-java \
-  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-  -jar .cache/$JARFILE --replace $changed_java_files
+java -jar .cache/$JARFILE --replace $changed_java_files
